# fell

./: Cargo.toml  LICENSE.MIT  README.md  deny.toml  perf.data.old
src/: app.rs  cpu_info_widget.rs  event.rs  main.rs  process_list.rs  sysinfo_thread.rs  system_info_widget.rs  tui.rs  utils.rs
src/proc/: cputime.pest  cputime.rs  loadavg.rs  meminfo.pest  meminfo.rs  mod.rs  prev_cpu.rs  process_info.rs  stat.pest  stat.rs  state.rs
