[package]
name = "fell"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
# Compile dependencies with optimizations on even in debug mode.
opt-level = 3

[profile.no-opt]
inherits = "dev"
opt-level = 0

[profile.release]
debug = false
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
anyhow = "1.0"
crossterm = { version = "0.28" }
libc = "0.2"
procfs = "0.16"
ratatui = "0.28"
