[package]
name = "fell"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = false
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
anyhow = "1.0"
crossterm = { version = "0.29" }
libc = "0.2"
ratatui = "0.29"
rustix = { version = "1.0", features = ["fs", "param"] }
thiserror = "2.0"
