[package]
name = "fell"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Peter Simonsson <peter.simonsson@gmail.com>"]
description = "A simple top alternative"
readme = "README.md"
repository = "https://github.com/petersimonsson/fell.git"
homepage = "https://github.com/petersimonsson/fell.git"
keywords = ["cli", "top"]
categories = ["command-line-utilities"]

[profile.release]
debug = false
strip = "symbols"
lto = true
opt-level = 3
codegen-units = 1

[dependencies]
anyhow = "1.0"
crossterm = { version = "0.29" }
libc = "0.2"
ratatui = "0.29"
rustix = { version = "1.1", features = ["fs", "param"] }
thiserror = "2.0"
